# LightDJITelloPy

./: README.md  connect.py  land.py  main.py  onefile.py  pyproject.toml  setup.cfg  test.py
lightdjitellopy/: __init__.py  tello.py
scripts/: connect.py  connectWifi.py  keyboard.py  keyboard_simple.py  swarmExample.py
